[project]
name = "view-xi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "pandas>=2.3.2",
    "requests>=2.32.4",
    "selenium>=4.10.0",
    "selenium-wire>=5.1.0",
    "setuptools>=80.9.0",
    "undetected-chromedriver>=3.5.5",
    "uvicorn[standard]>=0.35.0",
]
